--- a/enumgen.cabal
+++ b/enumgen.cabal
@@ -10,11 +10,10 @@ name:                enumgen
 -- PVP summary:      +-+------- breaking API changes
 --                   | | +----- non-breaking API additions
 --                   | | | +--- code changes with no API change
-version:             0.1.0.0
+version:             0.1.1.0
 
 -- A short (one-line) description of the package.
-synopsis:            Java-style enum interface
-
+synopsis:            Quasi-Quoter that generates Enum typeclasses implementations
 -- A longer description of the package.
 -- description:         
 
@@ -32,10 +31,10 @@ author:              Rafael Felix
 
 -- An email address to which users can send suggestions, bug reports, and 
 -- patches.
-maintainer:          reportbugs@github.please
+maintainer:          rafaelbfelix@outlook.com
 
 -- A copyright notice.
--- copyright:           
+copyright:           Feel free to use this code, if you do so, a thank-you note would be appreciated.
 
 category:            Data
 
